<resources>
    <string name="app_name">Reservas UTEC</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">inicio</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="configuracion">Configuracion</string>
    <string name="john_doe">John Doe</string>
    <string name="userEmail">2522002015@mail.utec.ed.sv</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuarios">Usuarios</string>
    <string name="edificios">Edificios</string>
    <string name="reservas">Reservas</string>
    <string name="canchas">Canchas</string>
    <string name="seleccion_imagen">Selecciona una imagen de galeria</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">nombre</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
</resources>
