<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="Hello"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                ></TextView>

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                android:text="John Doe"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textHello"
                app:layout_constraintTop_toTopOf="parent"></TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutUsuarios"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintEnd_toStartOf="@id/layoutEdificios"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/teams"
                        ></ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/usuarios"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutEdificios"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintStart_toEndOf="@id/layoutUsuarios"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/school"
                        ></ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/edificios"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutReservas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintEnd_toStartOf="@id/layoutEdificios"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutUsuarios"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/checklist"
                        ></ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reservas"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        >
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutCanchas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintStart_toEndOf="@id/layoutUsuarios"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutEdificios"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/field"
                        ></ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/canchas"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        >
                    </TextView>
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>